# pleco-flashcards

./: Cargo.toml  README.md  dbg_flash.txt  flash.txt  one_flash.txt
src/: card.rs  lib.rs  main.rs  main.rs.txt  review.rs
src/layout/: config.rs  cont.rs  layout.rs  mod.rs  util.rs  vlayout.rs
