[package]
name = "pleco_study"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.23.0"
font-kit = "0.11.0"
rand = "0.8.5"
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
